components/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ibmoffices
  labels:
    operator.tekton.dev/enable-annotation: enabled
spec: {}
