components/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibmoffices
  namespace: ibmoffices
  labels:
    app: ibmoffices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ibmoffices
  template:
    metadata:
      labels:
        app: ibmoffices
    spec:
      volumes:
        - name: quarkus-certificate-secret
          secret:
            secretName: lec-cert-secret
            defaultMode: 420
      containers:
        - name: ibmoffices
          image: >-
            image-registry.openshift-image-registry.svc:5000/ibmoffices/ibmoffices:ab10816cb64909adb6227829c39503f26ae94a57
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          volumeMounts:
            - name: quarkus-certificate-secret
              readOnly: true
              mountPath: /var/run/kubernetes.io/secrets/ssl
