components/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibmoffices-service
  namespace: ibmoffices
  labels:
    app: ibmoffices
spec:
  selector:
    app: ibmoffices
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: https
