components/app/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: offices-route
  namespace: ibmoffices
spec:
  to:
    kind: Service
    name: ibmoffices-service
    weight: 100
  port:
    targetPort: 8080
