components/app/base/secure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-route
spec:
  port:
    targetPort: 8443
  tls:
    termination: passthrough 
    insecureEdgeTerminationPolicy: None 
  to:
    kind: Service
    name: ibmoffices-service
